fixed fouc on hero element with visibility:hidden

--- a/sass/components/_swiper.scss
+++ b/sass/components/_swiper.scss
@@ -32,6 +32,10 @@
 }
 
 //VERTICAL SWIPER
+.verticalSwiper {
+  visibility: hidden;
+}
+
 .swiper-slide img {
   object-fit: scale-down;
   filter: grayscale(40%);
